src/msg/snapshots/twitch__msg__room_state__tests__parse_room_state_followers_non_zero.snap
---
source: src/msg/room_state.rs
expression: "f(\"@emote-only=1;followers-only=10;r9k=1;rituals=0;room-id=40286300;slow=5;subs-only=1 :tmi.twitch.tv ROOMSTATE #randers\")"
---
RoomState {
    channel: Channel(
        "#randers",
    ),
    channel_id: "40286300",
    emote_only: Some(
        true,
    ),
    followers_only: Some(
        Enabled(
            Some(
                Duration {
                    secs: 600,
                    nanos: 0,
                },
            ),
        ),
    ),
    r9k: Some(
        true,
    ),
    slow: Some(
        Duration {
            secs: 5,
            nanos: 0,
        },
    ),
    subs_only: Some(
        true,
    ),
}
