src/msg/snapshots/twitch__msg__room_state__tests__parse_room_state_partial_1.snap
---
source: src/msg/room_state.rs
expression: "f(\"@room-id=40286300;slow=5 :tmi.twitch.tv ROOMSTATE #randers\")"
---
RoomState {
    channel: Channel(
        "#randers",
    ),
    channel_id: "40286300",
    emote_only: None,
    followers_only: None,
    r9k: None,
    slow: Some(
        Duration {
            secs: 5,
            nanos: 0,
        },
    ),
    subs_only: None,
}
